# rover-UI

./: .gitignore  README.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: ArucoPanel.jsx  CameraPanel.jsx  GPSPanel.jsx  LaserScanPanel.jsx  MapPanel.jsx  StatusBar.jsx  TerminalPanel.jsx  TopicSelector.jsx
frontend/src/lib/: ros.js
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/sc_rover_bringup/share/sc_rover_bringup/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/sc_rover_bringup/share/sc_rover_bringup/cmake/: sc_rover_bringupConfig.cmake
ros2_ws/install/sc_rover_bringup/share/sc_rover_bringup/launch/: demo_sim_ground.launch.py
ros2_ws/install/sc_rover_sim/share/sc_rover_sim/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/sc_rover_bringup/: CMakeLists.txt
ros2_ws/src/sc_rover_sim/: setup.py
ros2_ws/src/sc_rover_sim/launch/: sim_sensors.launch.py
