<?xml version="1.0"?>
<package format="3">
  <name>sc_rover_bringup</name>
  <version>0.0.1</version>
  <description>Bringup with rosbridge and web_video_server</description>
  <maintainer email="you@example.com">Space Concordia</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>web_video_server</exec_depend>
  <exec_depend>sc_rover_sim</exec_depend>
</package>
